update top section stylings

--- a/index.html
+++ b/index.html
@@ -172,9 +172,7 @@
             </div>
           </div>
           <div class="sponsorShipIllustrationWrapper">
-            <img src="/images/fiscalsponsorship-ilustration-mobile.png" class="mobile" alt="Sponsorship Illustration"  />
-            <img src="/images/fiscalsponsorship-ilustration-sm.png" class="bigger" alt="Sponsorship Illustration"  />
-            <img src="/images/fiscalsponsorship-ilustration-lg.png" class="biggest" alt="Sponsorship Illustration"  />
+            <img src="/images/fiscalsponsorship-ilustration.png" class="biggest" alt="Sponsorship Illustration"  />
           </div>
         </div>
       </section>
@@ -778,6 +776,5 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
       </div>
     </div>
   </body>
-  <script src="/js/nav.js" type="text/javascript"></script>
-  <script src="/js/faq.js" type="text/javascript"></script>
+  <script src="/js/index.js" type="text/javascript"></script>
 </html>
