implement stickyheader js functionality

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="menuWrapper-sm">
               <ul class="menuListWrapper-sm">
                 <li class="menuList-sm homeLink">
-                  <a href="#" js-link="home">
+                  <a href="#" class="activeHomeLink" js-link="home">
                     Home
                   </a>
                 </li>
