--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Open Collective Foundation</title>
     <meta name="description" content="This is an example of a meta description.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/fiscalSponsorship.css">
@@ -16,12 +18,11 @@
     <link rel="stylesheet" href="/css/generalInformation.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/modal.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
-	  <div class="headerAndSponsorshipWrapper">
-      <header js-event="stickHeader">
+	  <div class="headerAndSponsorshipWrapper" >
+      <div class="backgroundHeader" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50" data-aos-easing="ease-out"></div>
+      <header js-event="stickHeader" data-aos="fade" data-aos-offset="100" data-aos-delay="300" data-aos-easing="ease-out">
         <div class="navWrapper">
             <div class="menuIcon">
               <button class="menuButton js-menuToggle">
@@ -44,18 +45,13 @@
               </button>
             </div>
             <div class="logoWrapper">
-              <a href="/">
+              <a href="#">
                 <img class="logo positiveLogo" js-view="positiveLogo" src="images/logo.png" alt="Open Collective Foundation" />
                 <img class="logo negativeLogo" js-view="negativeLogo" src="images/logo-colored.png" alt="Open Collective Foundation" />
               </a>
             </div>
             <div class="menuWrapper-sm">
               <ul class="menuListWrapper-sm">
-                <li class="menuList-sm homeLink">
-                  <a href="#" class="activeHomeLink" js-link="home">
-                    Home
-                  </a>
-                </li>
                 <li class="menuList-sm">
                   <a href="#whatWeOffer" js-link="whatWeOffer">
                     What we offer
@@ -114,7 +110,7 @@
             </div>
           <div class="mobileNav">
             <ul class="mobileNavListWrapper">
-              <a href="/" js-link="home">
+              <a href="#" js-link="home">
                 <li class="mobileNavList">
                   Home
                 </li>
@@ -148,19 +144,21 @@
         <div class="fiscalSponsorshipSectionContent">
           <div class="fiscalSponsorshipTitleAndActionWrapper">
             <div class="fiscalSponsorshipTitlesContainer">
-              <h3>
+              <h3 data-aos="fade" data-aos-offset="100" data-aos-delay="700" data-aos-easing="ease-out">
                 Get your initiative up and running today
               </h3>
-              <div class="title">
+              <div class="title" >
                <h1>
-                Fiscal Sponsorship
-                <span class="madeEasy">
+                <span data-aos="fade-down" data-aos-offset="100" data-aos-delay="700" data-aos-easing="ease-out">
+                  Fiscal Sponsorship
+                </span>
+                <span class="madeEasy" data-aos="fade-down" data-aos-offset="100" data-aos-delay="1100" data-aos-easing="ease-out">
                   made easy
                 </span>
                </h1>
               </div>
             </div>
-            <div class="actionWrapper">
+            <div class="actionWrapper" data-aos="fade-up" data-aos-offset="100" data-aos-delay="1400" data-aos-easing="ease-out">
               <button class="buttonStyleLink applyToStart mobileApply" js-event="applyToStart">
                 Apply to Start
               </button>
@@ -172,49 +170,49 @@
               </a>
             </div>
           </div>
-          <div class="sponsorShipIllustrationWrapper">
+          <div class="sponsorShipIllustrationWrapper" data-aos="fade-left" data-aos-offset="200" data-aos-delay="70" data-aos-easing="ease-out">
             <img src="/images/fiscalsponsorship-ilustration.png" class="biggest" alt="Sponsorship Illustration"  />
           </div>
         </div>
       </section>
     </div>
     <section id="whatWeOffer" js-view="mainSection" class="whatWeOffer">
-      <h2>
+      <h2 data-aos="fade-down" data-aos-offset="100" data-aos-delay="1800" data-aos-easing="ease-out-in">
         What we offer
       </h2>
       <div class="whatWeOfferItems">
         <div class="whatWeOfferItem fiscalSponsorship">
-          <div class="whatWeOfferIllustration">
+          <div class="whatWeOfferIllustration" data-aos="fade" data-aos-offset="100" data-aos-delay="2200" data-aos-easing="ease-out">
             <img src="/images/fiscalSponsorship-illustration.png" alt="Fiscal Sponsorship" />
           </div>
           <div class="whatWeOfferTextWrapper">
-            <h5>Let's work together</h5>
-            <h3>Fiscal Sponsorship</h3>
-            <p>
+            <h5 data-aos="fade" data-aos-offset="0" data-aos-delay="2300" data-aos-easing="ease-out-quad">Let's work together</h5>
+            <h3 data-aos="fade" data-aos-offset="0" data-aos-delay="2350" data-aos-easing="ease-out-quad">Fiscal Sponsorship</h3>
+            <p data-aos="fade" data-aos-offset="0" data-aos-delay="2400" data-aos-easing="ease-out-quad">
               The Open Collective Foundation 501(c)(3) offers fiscal sponsorship as a service to help initiatives get up and running in one day. No need to create a bank account or legal entity. Our platform enables you to easily receive donations and disburse them.
             </p>
           </div>
         </div>
         <div class="whatWeOfferItem reduceYourOverhead">
-          <div class="whatWeOfferIllustration">
+          <div class="whatWeOfferIllustration" data-aos="fade" data-aos-offset="100" data-aos-delay="2450" data-aos-easing="ease-out">
             <img src="/images/reduceoverhead-illustration.png" alt="Reduce Your Overhead" />
           </div>
           <div class="whatWeOfferTextWrapper">
-            <h5>We manage funds for your initiative</h5>
-            <h3>Reduce your overhead</h3>
-            <p>
+            <h5 data-aos="fade" data-aos-offset="100" data-aos-delay="2500" data-aos-easing="ease-out">We manage funds for your initiative</h5>
+            <h3 data-aos="fade" data-aos-offset="100" data-aos-delay="2550" data-aos-easing="ease-out">Reduce your overhead</h3>
+            <p data-aos="fade" data-aos-offset="100" data-aos-delay="2600" data-aos-easing="ease-out">
               We take care of receiving tax deductible donations for your initiative through our registered 501(c)(3) nonprofit. We manage your expenses, file taxes, and take care of accounting. Let us do the admin so you can focus on your mission!
             </p>
           </div>
         </div>
         <div class="whatWeOfferItem increaseCapacity">
-          <div class="whatWeOfferIllustration">
+          <div class="whatWeOfferIllustration" data-aos="fade" data-aos-offset="100" data-aos-delay="2650" data-aos-easing="ease-out">
             <img src="/images/increaseCapacity.png" alt="Increase capacity" />
           </div>
           <div class="whatWeOfferTextWrapper">
-            <h5>Purpose-built to streamline your process</h5>
-            <h3>Increase capacity</h3>
-            <p>
+            <h5 data-aos="fade" data-aos-offset="100" data-aos-delay="2700" data-aos-easing="ease-out">Purpose-built to streamline your process</h5>
+            <h3 data-aos="fade" data-aos-offset="100" data-aos-delay="2750" data-aos-easing="ease-out">Increase capacity</h3>
+            <p data-aos="fade" data-aos-offset="100" data-aos-delay="2800" data-aos-easing="ease-out">
               We automate the back-end processes so you can spend less time doing admin. We provide a dashboard where you can see the budget we are holding for you, how much you've spent and everything you need to tell your donors how to fund you. Reporting is automatic and in real time.
             </p>
           </div>
@@ -224,10 +222,10 @@
     <div class="getStartedInitiativeBG">
       <section class="readyToGetStartedSection">
         <div class="readyToGetStarted">
-          <div class="readyToGetStartedIllustration">
+          <div class="readyToGetStartedIllustration" data-aos="fade-right" >
             <img src="/images/readytogetstarted.png" alt="Ready to get started" />
           </div>
-          <div class="getStartedTextAndActionWrapper">
+          <div class="getStartedTextAndActionWrapper" data-aos="fade-left">
             <div class="getStartedTextWrapper">
               <div class="titleWrapper">
                 <h2>Ready to get started?</h2>
@@ -262,12 +260,12 @@
     <section id="whatDoWeDo" js-view="mainSection" class="initiativeSection">
       <div class="initiatives">
         <div class="titleWrapper">
-          <h2>
+          <h2 data-aos="fade">
             We enable initiatives to focus on their mission
           </h2>
         </div>
         <div class="initiativesWrapper">
-          <div class="initiative financialAdmin">
+          <div class="initiative financialAdmin" data-aos="fade">
             <div>
               <img src="/images/financial-admin.svg" alt="Financial Admin" />
             </div>
@@ -278,7 +276,7 @@
               </p>
             </div>
           </div>
-          <div class="initiative payYourExpenses">
+          <div class="initiative payYourExpenses" data-aos="fade">
             <div>
               <img src="/images/pay-expenses.svg" alt="Pay Expenses" />
             </div>
@@ -289,7 +287,7 @@
               </p>
             </div>
           </div>
-          <div class="initiative taxDeductible">
+          <div class="initiative taxDeductible" data-aos="fade">
             <div>
               <img src="/images/tax-deductible.svg" alt="Tax deductible" />
             </div>
@@ -300,7 +298,7 @@
               </p>
             </div>
           </div>
-          <div class="initiative plusGreatCommunity">
+          <div class="initiative plusGreatCommunity" data-aos="fade">
             <div>
               <img src="/images/community-features.svg" alt="Community features" />
             </div>
@@ -317,17 +315,19 @@
     <section id="ourFees" js-view="mainSection" class="ourFeesSection">
       <div class="ourFees">
         <div class="titleWrapper">
-          <h1>
+          <h1 data-aos="fade">
             Our Fees
           </h1>
-          <h3>In order to support you better, we use the Open Collective Platform to manage your initiative.</h3>
+          <h3 data-aos="fade">
+            In order to support you better, we use the Open Collective Platform to manage your initiative.
+          </h3>
         </div>
         <div class="fiscalSponsorshipWrapper">
-          <h2>Fiscal Sponsorship Fees</h2>
+          <h2 data-aos="fade">Fiscal Sponsorship Fees</h2>
           <p>On each incoming donation via Bank Transfer or Check</p>
         </div>
         <div class="amountRaisedAndCrowdFundWrapper">
-          <div class="amountRaisedWrapperWithTitle">
+          <div class="amountRaisedWrapperWithTitle" data-aos="fade-right">
             <p class="desktop">On each incoming donation via Bank Transfer or Check</p>
             <div class="amountRaisedWrapper">
               <div class="amountRaisedCard eightPercent">
@@ -359,7 +359,7 @@
               </div>
             </div>
           </div>
-          <div class="crowdFundingWrapper">
+          <div class="crowdFundingWrapper" data-aos="fade-left">
             <h3>Crowd funding</h3>
             <div class="amountRaisedCard fivePercent">
               <div class="figureRaisedWrapper">
@@ -381,9 +381,9 @@
     </section>
     <section class="donorsSection">
       <div class="donorsBgWrapper">
-        <img src="/images/donors-bg.svg" alt="Initiatives" />
+        <img data-aos="zoom-in" src="/images/donors-bg.svg" alt="Initiatives" />
       </div>
-      <div class="donors">
+      <div class="donors" data-aos="fade">
         <div class="donorsContent">
           <div class="donorsTextWrapper">
             <div class="donorsTitleWrapper">
@@ -745,6 +745,10 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
                   <input type="text" required name="name" placeholder="Agora Foundation" />
                 </div>
                 <div class="inputWrapper">
+                  <label>What's its email</label>
+                  <input type="email" required name="email" placeholder="agora@agorafoundation.com" />
+                </div>
+                <div class="inputWrapper">
                   <label>What URL would you like?</label>
                   <div class="initiativeUrlWrapper">
                     <div class="prefix">opencollective.foundation/</div>
@@ -782,6 +786,16 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
         </div>
       </div>
     </div>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        once: true,
+        duration: 1000,
+        offset: 120,
+        easing: 'ease-in-out'
+      });
+    </script>
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="/js/index.js" type="text/javascript"></script>
 </html>
