disable animation for mobile

--- a/index.html
+++ b/index.html
@@ -792,7 +792,8 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
         once: true,
         duration: 1000,
         offset: 120,
-        easing: 'ease-in-out'
+        easing: 'ease-in-out',
+        disable: 'mobile'
       });
     </script>
   </body>
