update crowdfunding and apply to start button copy

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 Apply to Start
               </button>
               <button class="buttonStyleLink applyToStart desktopApply" js-event="applyToStart">
-                Apply to Start a Fund
+                Apply with your initiative
               </button>
               <a href="https://docs.opencollective.foundation" class="learnMore">
                 Learn More
@@ -244,7 +244,7 @@
                 Apply to Start
               </button>
               <button class="buttonStyleLink longerTextLink" js-event="applyToStart">
-                Apply to Start a Fund
+                Apply with your initiative
               </button>
               <a class="buttonStyleLink readDocs mobile" href="#">
                 Read docs
@@ -360,7 +360,7 @@
             </div>
           </div>
           <div class="crowdFundingWrapper" data-aos="fade-left">
-            <h3>Crowd funding</h3>
+            <h3>Crowdfunding</h3>
             <div class="amountRaisedCard fivePercent">
               <div class="figureRaisedWrapper">
                 <div class="figure">
@@ -733,7 +733,7 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
               </form>
             </div>
           </div>
-          <div class="createYourInitiativeModalWrapper"js-view="createYourInitiativeModal" >
+          <div class="createYourInitiativeModalWrapper" js-view="createYourInitiativeModal" >
             <div class="createYourInitiativeModalTitleWrapper">
               <h1>Create your Initiatives</h1>
               <p>Introduce your Foundation to the community</p>
